--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ server response
 <iframe width="100%" height="375" src="http://www.youtube.com/embed/wrdR5Su_Stg?rel=0&vq=hd1080" frameborder="0" allowfullscreen></iframe>
 <figcaption>Introduktionsvideo om html, css och javascript.</figcaption>
 </figure>
+
 <h2 id="kom-ig-ng-med-html">Kom igång med HTML</h2>
 <p><a href="http://sv.wikipedia.org/wiki/HTML">HyperText Markup Language</a> (HTML) är det språk vi använder för att märka upp content vi vill kunna visa i en webbläsare. I detta kapitel diskuterar vi vad HTML är och hur vi skriver det.</p>
 <p>Innan vi ser till ett exempel behöver vi kort diskutera vad HTML är för någonting. Låt oss utföra en tankelek. Ponera att du, på datorn, skrivit ett dokument i <em>Microsoft Word</em>, <em>Pages</em>, <em>Open Office</em> eller dylik ordbehandlare. Fundera kort över vad detta dokument består av. Vad innehåller det? Text? Jo, onekligen. Men mer exakt än så då? De flesta dokument innehåller någon kombination av rubriker, underrubriker och paragrafer. Men gräver vi djupare än så så hittar vi saker som citat, listor, understrykningar, fetstilsmarkeringar, kursivitet o.s.v.</p>
@@ -1158,11 +1159,11 @@ p{
 <ul>
 <li><em>Rad 5</em> i html-dokumentet är det som gör att det som säger åt HTML-ninjorna att de behöver hämta CSS-ninjorna och att de ska läsa filen <code>main.css</code>.</li>
 <li><em>Rad 1</em> i css-dokumentet är en <code>selector</code> vars <code>target</code> är <code>&lt;body&gt;</code>-elementet. Det betyder att allt mellan följande <a href="http://en.wikipedia.org/wiki/Bracket#Curly_brackets_or_braces_.7B_.7D">måsvingar</a> (<code>{...}</code>) kommer att appliceras på <em>alla</em> <code>&lt;body&gt;</code>-element i html-dokumentet. Nu bör det ju förstås bara finnas ett body-element men förhoppningsvis har du redan förstått att vi hade kunnat välja vilket annat html-element som helst.</li>
-<li><em>Rad 2 och 5</em> i css-dokumentet är faktiskt css-<code>deklarationer</code>. Det är de som således bestämmer vilken visuell effekt som ska appliceras på just den selector vi definierat.<blockquote>
+<li><em>Rad 2 och 5</em> i css-dokumentet är faktiskt css-<code>deklarationer</code>. Det är de som således bestämmer vilken visuell effekt som ska appliceras på just den selector vi definierat.</li>
+</ul>
+<blockquote>
 <p>En css-<code>selector</code> kan vara vilket html-<code>element</code> som helst.</p>
 </blockquote>
-</li>
-</ul>
 <p>Låt oss se det rent generellt. Syntaxen är alltså som följande.</p>
 <p>CSS-syntax uttryckt generellt</p>
 <pre><code>css-selector{
